--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -1,7 +1,7 @@
 :root {
     --color-background: white;
     --color-on-background: black;
-    --color-primary: #0066ff;
+    --color-primary: black;
     --color-on-primary: white;
 }
 
